# unity-wrapper-vorbis

./: .gitattributes  .gitignore  .gitmodules  CODEX.md  LICENSE  README.md
.github/workflows/: activation.yaml  build_and_update.yaml  build_native_libraries.yaml
projects/Android/: .gitignore  build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
projects/Android/app/: .gitignore  build.gradle  proguard-rules.pro
projects/Android/app/src/androidTest/java/vorbisplugin/gindemit/com/vorbisplugin/: ExampleInstrumentedTest.java
projects/Android/app/src/main/: AndroidManifest.xml
projects/Android/app/src/main/java/vorbisplugin/gindemit/com/vorbisplugin/: MainActivity.java
projects/Android/app/src/main/res/drawable/: ic_launcher_background.xml
projects/Android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
projects/Android/app/src/main/res/layout/: activity_main.xml
projects/Android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
projects/Android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
projects/Android/app/src/test/java/vorbisplugin/gindemit/com/vorbisplugin/: ExampleUnitTest.java
projects/Android/gradle/wrapper/: gradle-wrapper.properties
projects/CMake/: CMakeLists.txt  CMakeSettings.json
projects/VorbisPlugin/: CMakeSettings.json
projects/win/VorbisPlugin/: .gitignore  CMakeLists.txt  CMakeSettings.json  VorbisPlugin.cpp  VorbisPlugin.h
src/: CharArray.h  ErrorCodes.h  ExportApi.h  FloatArray.h  OggFileCallbacks.h  PluginTest.c  TestSamplesArray.h  UnsignedCharArray.h  VorbisPlugin.h  VorbisPluginDecoder.c  VorbisPluginEncoder.c  VorbisPluginEncoder.h  decoder.c  encoder.c
unity/Assets/PlayModeTests/src/: OggFileWriteReadTest.cs  SourceFilesPropertiesTests.cs
unity/Assets/VorbisPlugin/: package.json
unity/Assets/VorbisPlugin/Plugins/OSX/: libVorbisPlugin.dylib
unity/Assets/_Presentation/Prefabs/: PluginTest.prefab
unity/Assets/_Presentation/Scene/: Main.unity
unity/Assets/_Source/Presentation/: Presentation.asmdef
unity/Assets/_Source/Presentation/src/: StreamTest.cs
unity/Assets/_Source/Support/src/StreamingAssets/: StreamingAssetsHelper.cs
unity/Assets/_Source/Support/src/ToStringHelpers/: FIleSizeFormatter.cs
unity/ProjectSettings/: ProjectSettings.asset
unity/UserSettings/: EditorUserSettings.asset
unity/unity-project-vorbis/: .gitattributes  README.md
unity/unity-project-vorbis/UnityClient/: .gitignore
unity/unity-project-vorbis/UnityClient/Assets/PlayModeTests/: PlayModeTests.asmdef
unity/unity-project-vorbis/UnityClient/Assets/PlayModeTests/src/: Consts.cs  OggFileWriteReadTest.cs  OggMemoryBufferWriteReadTest.cs  PerformanceTests.cs  SourceFilesPropertiesTests.cs
unity/unity-project-vorbis/UnityClient/Assets/TextMesh Pro/Fonts/: LiberationSans - OFL.txt
unity/unity-project-vorbis/UnityClient/Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF - Drop Shadow.mat  LiberationSans SDF - Outline.mat
unity/unity-project-vorbis/UnityClient/Assets/TextMesh Pro/Resources/Shaders/: TMP_SDF Overlay.shader  TMP_SDF-Mobile Masking.shader  TMP_SDF-Mobile Overlay.shader  TMP_SDF-Mobile.shader  TMP_SDF-Surface-Mobile.shader  TMP_SDF-Surface.shader  TMP_SDF.shader  TMPro_Properties.cginc  TMPro_Surface.cginc
unity/unity-project-vorbis/UnityClient/Assets/VorbisPlugin/: package.json
unity/unity-project-vorbis/UnityClient/Assets/VorbisPlugin/Impl/: VorbisPluginImpl.asmdef
unity/unity-project-vorbis/UnityClient/Assets/VorbisPlugin/Impl/src/: NativeBridge.cs  NativeErrorCode.cs  NativeErrorException.cs  VorbisPlugin.cs
unity/unity-project-vorbis/UnityClient/Assets/VorbisPlugin/Plugins/OSX/: libVorbisPlugin.dylib
unity/unity-project-vorbis/UnityClient/Assets/_Presentation/Prefabs/: PluginTest.prefab
unity/unity-project-vorbis/UnityClient/Assets/_Presentation/Scene/: Main.unity  MainSettings.lighting
unity/unity-project-vorbis/UnityClient/Assets/_Source/MyEditor/: MyEditor.asmdef
unity/unity-project-vorbis/UnityClient/Assets/_Source/MyEditor/src/Menu/: OpenPersistentDataPathFolder.cs
unity/unity-project-vorbis/UnityClient/Assets/_Source/Presentation/: Presentation.asmdef
unity/unity-project-vorbis/UnityClient/Assets/_Source/Presentation/src/: PluginTest.cs  StreamTest.cs  WaveAudio.cs
unity/unity-project-vorbis/UnityClient/Assets/_Source/Support/: Support.asmdef
unity/unity-project-vorbis/UnityClient/Assets/_Source/Support/src/StreamingAssets/: StreamingAssetsHelper.cs
unity/unity-project-vorbis/UnityClient/Assets/_Source/Support/src/ToStringHelpers/: FIleSizeFormatter.cs
unity/unity-project-vorbis/UnityClient/ProjectSettings/: DynamicsManager.asset  EditorSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset  graphicssettings.asset
unity/unity-project-vorbis/UnityClient/UserSettings/: EditorUserSettings.asset
